--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,28 +7,18 @@
     android:id="@+id/mview"
     tools:context="com.example.hufz.myapplication.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textview"
-        android:text="Hello World!"
-        tools:layout_editor_absoluteY="276dp"
-        tools:layout_editor_absoluteX="154dp"
-        android:layout_below="@+id/image"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="142dp" />
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="128dp"
-        android:layout_height="141dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         app:srcCompat="@drawable/a2"
         tools:layout_editor_absoluteX="230dp"
-        tools:layout_editor_absoluteY="154dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        tools:layout_editor_absoluteY="154dp" />
 
 
-
-
-</RelativeLayout>
+</LinearLayout>
